@@ -360,6 +360,22 @@ public final class MutableDouble2D implements java.io.Serializable, Cloneable
         return this;
         }
     
+    /** Sets me to the sum of other1 and other2, returning me. */
+    public final MutableDouble2D add(final Double2D other1, final MutableDouble2D other2)
+        {
+        x = other1.x + other2.x;
+        y = other1.y + other2.y;
+        return this;
+        }
+    
+    /** Sets me to the sum of other1 and other2, returning me. */
+    public final MutableDouble2D add(final MutableDouble2D other1, final Double2D other2)
+        {
+        x = other1.x + other2.x;
+        y = other1.y + other2.y;
+        return this;
+        }
+    
     /** Equivalent to <tt>(new MutableDouble2D(d))</tt>, but <tt>(d.dup())</tt> shorter of course, but perhaps not quite as fast. */
     public final MutableDouble2D dup()
         {
@@ -385,6 +401,22 @@ public final class MutableDouble2D implements java.io.Serializable, Cloneable
 
     /** Subtracts other2 from other1, setting me to the result and returning me. */
     public final MutableDouble2D subtract(MutableDouble2D other1, MutableDouble2D other2)
+        {
+        x = other1.x - other2.x;
+        y = other1.y - other2.y;
+        return this;
+        }
+            
+    /** Subtracts other2 from other1, setting me to the result and returning me. */
+    public final MutableDouble2D subtract(Double2D other1, MutableDouble2D other2)
+        {
+        x = other1.x - other2.x;
+        y = other1.y - other2.y;
+        return this;
+        }
+            
+    /** Subtracts other2 from other1, setting me to the result and returning me. */
+    public final MutableDouble2D subtract(MutableDouble2D other1, Double2D other2)
         {
         x = other1.x - other2.x;
         y = other1.y - other2.y;
@@ -419,6 +451,14 @@ public final class MutableDouble2D implements java.io.Serializable, Cloneable
 
     /** Multiplies other by val, setting me to the result and returning me. */
     public final MutableDouble2D multiply(MutableDouble2D other, final double val)
+        {
+        x = other.x * val;
+        y = other.y * val;
+        return this;
+        }
+
+    /** Multiplies other by val, setting me to the result and returning me. */
+    public final MutableDouble2D multiply(Double2D other, final double val)
         {
         x = other.x * val;
         y = other.y * val;
